syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message Sequence {
  int64 beginSequence = 1;
  int64 endSequence = 2;
}

message NumberOfSequence {
  int64 currentNumber = 1;
}


service GenerateSequenceService {
  rpc giveSequence(Sequence) returns (stream NumberOfSequence);
}